# kanga

./: README.md  pyproject.toml
DATASETS/: B2.csv  B3.csv  B5.csv  I_12_11.csv  I_14_4.csv  summary.json
DATASETS/feynman_dataframes/: B2.csv  B3.csv  B4.csv  B6.csv  I_10_7.csv  I_12_1.csv  I_12_4.csv  I_12_5.csv  I_14_3.csv  summary.json
results/: B3_metrics.json  B6_metrics.json  I_10_7_metrics.json  I_11_19_metrics.json  I_12_11_metrics.json  I_12_2_metrics.json  I_12_4_metrics.json  I_14_3_metrics.json  I_14_4_metrics.json
results/second/: B2_metrics.json  B3_metrics.json  I_10_7_metrics.json  I_11_19_metrics.json  I_12_2_metrics.json  I_12_4_metrics.json  I_12_5_metrics.json  I_14_3_metrics.json  I_14_4_metrics.json
scripts/: run_all.py  run_experiment.py
scripts/model/: 0.0_config.yml  0.0_state  0.1_cache_data  0.1_config.yml  0.1_state  0.2_config.yml  0.2_state
scripts/results/: B2_metrics.json  B3_metrics.json  B4_metrics.json  B5_metrics.json  I_12_1_metrics.json  I_12_5_metrics.json  I_8_14_metrics.json
scripts/results/second/: B4_metrics.json  B5_metrics.json  B6_metrics.json  I_12_11_metrics.json  (+2 more)
scripts/runs/: ga_B2.csv  ga_B3.csv  ga_B4.csv  ga_B5.csv  ga_B6.csv  ga_I_10_7.csv  ga_I_11_19.csv  ga_I_12_1.csv  ga_I_12_11.csv  ga_I_12_2.csv  ga_I_12_4.csv  ga_I_12_5.csv  ga_I_14_3.csv  ga_I_14_4.csv  ga_I_8_14.csv
src/data/: dataio.py  dataset_generator.py
src/evo/: ga.py
src/models/: baseline_kan.py  evo_kan.py
src/utils/: feat_sel.py  logger.py  symbolic_lib.py
tests/: test_dataio.py  test_feat_sel.py  test_ga.py
(+39 files in other folders)
