[project]
name = "kanga"
version = "0.1.0"
description = "GA for feature selection in symbolic KANs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.19.2",
    "deap==1.4.3",
    "matplotlib==3.6.2",
    "numpy==1.24.4",
    "pandas==2.0.1",
    "pyarrow>=20.0.0",
    "pykan==0.2.8",
    "pytest>=8.4.0",
    "scikit-learn==1.7.0",
    "sympy==1.11.1",
    "torch==2.2.2",
    "tqdm==4.66.2",
]
